force-app/main/default/objects/Journey__c/Journey__c.object-meta.xml
<CustomObject>
    <description>Journeys track the onboarding process of individual candidates. Each journey can be associated with multiple tasks, either manually entered or derived from a template.</description>
    <label>Journey</label>
    <nameField>
        <label>Journey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>