force-app/main/default/objects/Journey__c/fields/Candidate_Email__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Email__c</fullName>
    <description>Email address for the candidate.</description>
    <label>Candidate Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>