force-app/main/default/objects/Journey__c/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <description>Name of the manager.</description>
    <label>Manager Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>