force-app/main/default/objects/Journey__c/fields/Onboarding_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The start date of the candidates onboarding.</description>
    <label>Onboarding Start Date</label>
    <type>Date</type>
</CustomField>