force-app/main/default/objects/Journey__c/fields/Template_Used__c.field-meta.xml
<CustomField>
    <fullName>Template_Used__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field links the Journey to the template it was created from, allowing for traceability.</description>
    <label>Template Used</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>Journeys</relationshipLabel>
    <relationshipName>Journeys</relationshipName>
    <type>Lookup</type>
</CustomField>